tests/lang/compile_fail/generic_impl_body_type_mismatch.expo
struct Box<T>
  value: T
end

impl Box<T>
  fn typo(self) -> Int
    "not an int"
  end
end

fn main
  b = Box{value: 1}
  print(b.typo())
end
